--- a/package.json
+++ b/package.json
@@ -2,22 +2,18 @@
   "name": "glint",
   "repository": "https://github.com/typed-ember/glint",
   "private": true,
-  "workspaces": [
-    "packages/*",
-    "test-packages/*"
-  ],
   "scripts": {
-    "lint": "yarn lint:scripts && yarn lint:formatting",
-    "lint:fix": "yarn lint:scripts --fix && yarn prettier --write .",
-    "lint:scripts": "yarn eslint --max-warnings 0 --cache .",
-    "lint:formatting": "yarn prettier --check .",
-    "test": "yarn workspaces run test",
+    "lint": "pnpm lint:scripts && pnpm lint:formatting",
+    "lint:fix": "pnpm lint:scripts --fix && pnpm prettier --write .",
+    "lint:scripts": "pnpm eslint --max-warnings 0 --cache .",
+    "lint:formatting": "pnpm prettier --check .",
+    "test": "pnpm --filter '*' run test",
     "build": "tsc --build",
-    "release-it": "echo \"Running release-it via yarn breaks publishing! Use npx or a Volta global installation.\""
+    "release-it": "echo \"Running release-it via pnpm breaks publishing! Use npx or a Volta global installation.\""
   },
   "volta": {
     "node": "16.17.1",
-    "yarn": "1.22.4"
+    "pnpm": "8.15.1"
   },
   "devDependencies": {
     "@release-it-plugins/lerna-changelog": "^5.0.0",
