--- a/packages/environment-ember-loose/package.json
+++ b/packages/environment-ember-loose/package.json
@@ -19,7 +19,7 @@
     "test": "glint --project __tests__/type-tests && vitest run",
     "test:watch": "vitest watch",
     "build": "tsc --build",
-    "prepack": "yarn build"
+    "prepack": "pnpm build"
   },
   "files": [
     "README.md",
@@ -34,6 +34,7 @@
     "@types/ember__controller": "^4.0.2",
     "@types/ember__object": "^4.0.4",
     "@types/ember__routing": "^4.0.11",
+    "@types/node": "^18.11.5",
     "ember-cli-htmlbars": "^6.0.1",
     "ember-modifier": "^3.2.7 || ^4.0.0"
   },
@@ -62,6 +63,7 @@
   },
   "devDependencies": {
     "@glimmer/component": "^1.1.2",
+    "@glint/core": "workspace:*",
     "@types/ember__array": "^4.0.2",
     "@types/ember__component": "^4.0.10",
     "@types/ember__controller": "^4.0.2",
