--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -24,12 +24,12 @@
     "Linters"
   ],
   "scripts": {
-    "pretest": "yarn build",
+    "pretest": "pnpm build",
     "test": "node lib/__tests__/support/launch-from-cli.mjs",
-    "build": "yarn compile && yarn bundle",
+    "build": "pnpm compile && pnpm bundle",
     "compile": "tsc --build",
     "bundle": "esbuild lib/src/extension.js --bundle --outfile=dist/extension.js --platform=node --external:vscode --minify",
-    "vscode:prepublish": "yarn build",
+    "vscode:prepublish": "pnpm build",
     "extension:package": "vsce package --no-dependencies",
     "extension:publish": "vsce publish --no-dependencies"
   },
@@ -104,8 +104,9 @@
     "@vscode/test-electron": "Dropped support for Node < 16 in the 2.2.1 patch release, so locking to 2.2.0 while we still support Node 14."
   },
   "devDependencies": {
-    "@glint/core": "^1.4.0",
+    "@glint/core": "workspace:*",
     "@types/mocha": "^10.0.1",
+    "@types/node": "^18.11.5",
     "@types/vscode": "^1.68.1",
     "@vscode/test-electron": "^2.3.8",
     "@vscode/vsce": "^2.22.0",
