--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -41,13 +41,14 @@
     "vscode-languageserver-textdocument": "^1.0.5",
     "vscode-uri": "^3.0.8",
     "yargs": "^17.5.1",
-    "@volar/kit": "~2.3.0-alpha.4",
-    "@volar/language-core": "~2.3.0-alpha.4",
-    "@volar/language-server": "~2.3.0-alpha.4",
-    "@volar/language-service": "~2.3.0-alpha.4",
-    "@volar/source-map": "~2.3.0-alpha.4",
-    "@volar/typescript": "~2.3.0-alpha.4",
-    "volar-service-typescript": "0.0.49"
+    "@volar/kit": "2.3.0",
+    "@volar/language-core": "2.3.0",
+    "@volar/language-server": "2.3.0",
+    "@volar/language-service": "2.3.0",
+    "@volar/source-map": "2.3.0",
+    "@volar/typescript": "2.3.0",
+    "@volar/test-utils": "2.3.0",
+    "volar-service-typescript": "0.0.51"
   },
   "devDependencies": {
     "glint-monorepo-test-utils": "^1.4.0",
@@ -56,11 +57,11 @@
     "@types/semver": "^7.3.13",
     "@types/uuid": "^8.3.4",
     "@types/yargs": "^17.0.10",
-    "@vitest/ui": "^0.23.4",
+    "@vitest/ui": "~1.0.0",
     "common-tags": "^1.8.0",
     "execa": "^4.0.1",
     "strip-ansi": "^6.0.0",
-    "vitest": "^0.22.0"
+    "vitest": "~1.0.0"
   },
   "publishConfig": {
     "access": "public"
