--- a/packages/environment-ember-loose/package.json
+++ b/packages/environment-ember-loose/package.json
@@ -70,7 +70,7 @@
     "@types/ember__routing": "^4.0.11",
     "ember-modifier": "^3.2.7 || ^4.0.0",
     "expect-type": "^0.15.0",
-    "vitest": "^0.22.0"
+    "vitest": "~1.0.0"
   },
   "publishConfig": {
     "access": "public"
