--- a/packages/environment-ember-template-imports/package.json
+++ b/packages/environment-ember-template-imports/package.json
@@ -58,7 +58,7 @@
     "@types/ember__helper": "^4.0.1",
     "@types/ember__modifier": "^4.0.3",
     "@types/ember__routing": "^4.0.12",
-    "vitest": "^0.22.0"
+    "vitest": "~1.0.0"
   },
   "publishConfig": {
     "access": "public"
