--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -36,7 +36,7 @@
     "@types/js-yaml": "^4.0.5",
     "@types/yargs": "^17.0.10",
     "json5": "^2.2.2",
-    "vitest": "^0.22.0"
+    "vitest": "~1.0.0"
   },
   "publishConfig": {
     "access": "public"
