--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -41,13 +41,13 @@
     "vscode-languageserver-textdocument": "^1.0.5",
     "vscode-uri": "^3.0.8",
     "yargs": "^17.5.1",
-    "@volar/kit": "2.3.0",
-    "@volar/language-core": "2.3.0",
-    "@volar/language-server": "2.3.0",
-    "@volar/language-service": "2.3.0",
-    "@volar/source-map": "2.3.0",
-    "@volar/typescript": "2.3.0",
-    "@volar/test-utils": "2.3.0",
+    "@volar/kit": "~2.3.0",
+    "@volar/language-core": "~2.3.0",
+    "@volar/language-server": "~2.3.0",
+    "@volar/language-service": "~2.3.0",
+    "@volar/source-map": "~2.3.0",
+    "@volar/typescript": "~2.3.0",
+    "@volar/test-utils": "~2.3.0",
     "volar-service-typescript": "0.0.51"
   },
   "devDependencies": {
