--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -236,8 +236,8 @@
     "@glint/core": "^1.4.0",
     "@types/mocha": "^10.0.1",
     "@types/vscode": "^1.68.1",
-    "@volar/language-server": "2.3.0",
-    "@volar/vscode": "2.3.0",
+    "@volar/language-server": "~2.3.0",
+    "@volar/vscode": "~2.3.0",
     "@vscode/test-electron": "^2.3.8",
     "@vscode/vsce": "^2.22.0",
     "esbuild": "^0.15.16",
