fidgeting with runTsc

--- a/tsconfig.compileroptions.json
+++ b/tsconfig.compileroptions.json
@@ -4,9 +4,10 @@
     // Node16 allows top-level `await`, which was also unflagged in Node 14.8
     "module": "Node16",
     "moduleResolution": "Node16",
-
-    // changing this was necessary for WeakRef to be available (required/referenced in Volar)
-    "lib": ["ESNext", "dom"],
+    "lib": [
+      "WebWorker",
+			"ES2021"
+    ],
     "strict": true,
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
