--- a/tsconfig.compileroptions.json
+++ b/tsconfig.compileroptions.json
@@ -4,10 +4,8 @@
     // Node16 allows top-level `await`, which was also unflagged in Node 14.8
     "module": "Node16",
     "moduleResolution": "Node16",
-    "lib": [
-      "WebWorker",
-			"ES2021"
-    ],
+    // changing this was necessary for WeakRef to be available (required/referenced in Volar)
+    "lib": ["ESNext", "dom"],
     "strict": true,
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
