Split typechecking from tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,34 @@ env:
   CI: true
 
 jobs:
+  lint: 
+    name: Lint
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 18
+          cache: yarn
+
+      - run: yarn install --frozen-lockfile
+      - run: yarn lint
+
+
+  type-tests:
+    name: "Type Tests"
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 18
+          cache: yarn
+
+      - run: yarn install --frozen-lockfile
+      - run: "yarn workspaces run test:typecheck"
+      - run: "yarn workspaces run test:tsc"
+
   test:
     name: Test
     runs-on: ubuntu-latest
