--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint:scripts": "yarn eslint --max-warnings 0 --cache .",
     "lint:formatting": "yarn prettier --check .",
     "test": "yarn workspaces run test",
+    "test:typecheck": "yarn workspaces run test:typecheck",
     "build": "tsc --build",
     "release-it": "echo \"Running release-it via yarn breaks publishing! Use npx or a Volta global installation.\""
   },
