Fix requirements for yarn@1 workspaces run
See: https://github.com/yarnpkg/yarn/issues/6739

--- a/packages/environment-ember-template-imports/package.json
+++ b/packages/environment-ember-template-imports/package.json
@@ -17,6 +17,8 @@
   ],
   "scripts": {
     "test": "vitest run",
+    "test:typecheck": "echo 'no standalone typecheck within this project'",
+    "test:tsc": "echo 'no standalone typecheck within this project'",
     "test:watch": "vitest watch",
     "build": "tsc --build",
     "prepack": "yarn build"
