--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -24,6 +24,8 @@
   },
   "scripts": {
     "test": "vitest run",
+    "test:typecheck": "echo 'no standalone typecheck within this project'",
+    "test:tsc": "echo 'no standalone typecheck within this project'",
     "test:watch": "vitest watch",
     "build": "tsc --build",
     "prepack": "yarn build"
