--- a/packages/environment-ember-loose/package.json
+++ b/packages/environment-ember-loose/package.json
@@ -16,6 +16,8 @@
     "glint-environment"
   ],
   "scripts": {
+    "test": "echo 'no tests within this project'",
+    "test:tsc": "echo 'no standalone typecheck within this project'",
     "test:typecheck": "glint --project __tests__/type-tests && vitest run",
     "test:watch": "vitest watch",
     "build": "tsc --build",
