We must build before running the type tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,6 +44,7 @@ jobs:
           cache: yarn
 
       - run: yarn install --frozen-lockfile
+      - run: "yarn build"
       - run: "yarn workspaces run test:typecheck"
       - run: "yarn workspaces run test:tsc"
 
@@ -68,8 +69,6 @@ jobs:
             ${{ runner.os }}-yarn-
       - name: Install Dependencies
         run: yarn install --frozen-lockfile
-      # - name: Lint
-      #   run: yarn lint
       - name: Build
         run: yarn build
       - name: Run Tests
