--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -35,13 +35,13 @@
   },
   "dependencies": {
     "@glimmer/syntax": "^0.84.3",
-    "@volar/kit": "~2.3.0",
-    "@volar/language-core": "~2.3.0",
-    "@volar/language-server": "~2.3.0",
-    "@volar/language-service": "~2.3.0",
-    "@volar/source-map": "~2.3.0",
-    "@volar/test-utils": "~2.3.0",
-    "@volar/typescript": "~2.3.0",
+    "@volar/kit": "2.4.0-alpha.13",
+    "@volar/language-core": "2.4.0-alpha.13",
+    "@volar/language-server": "2.4.0-alpha.13",
+    "@volar/language-service": "2.4.0-alpha.13",
+    "@volar/source-map": "2.4.0-alpha.13",
+    "@volar/test-utils": "2.4.0-alpha.13",
+    "@volar/typescript": "2.4.0-alpha.13",
     "computeds": "^0.0.1",
     "escape-string-regexp": "^4.0.0",
     "semver": "^7.5.2",
