--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -47,7 +47,7 @@
     "semver": "^7.5.2",
     "silent-error": "^1.1.1",
     "uuid": "^8.3.2",
-    "volar-service-typescript": "0.0.51",
+    "volar-service-typescript": "volar-2.4",
     "vscode-languageserver-textdocument": "^1.0.5",
     "vscode-uri": "^3.0.8",
     "yargs": "^17.5.1"
