--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -35,19 +35,19 @@
   },
   "dependencies": {
     "@glimmer/syntax": "^0.84.3",
-    "@volar/kit": "~2.3.0",
-    "@volar/language-core": "~2.3.0",
-    "@volar/language-server": "~2.3.0",
-    "@volar/language-service": "~2.3.0",
-    "@volar/source-map": "~2.3.0",
-    "@volar/test-utils": "~2.3.0",
-    "@volar/typescript": "~2.3.0",
+    "@volar/kit": "2.4.0-alpha.14",
+    "@volar/language-core": "2.4.0-alpha.14",
+    "@volar/language-server": "2.4.0-alpha.14",
+    "@volar/language-service": "2.4.0-alpha.14",
+    "@volar/source-map": "2.4.0-alpha.14",
+    "@volar/test-utils": "2.4.0-alpha.14",
+    "@volar/typescript": "2.4.0-alpha.14",
     "computeds": "^0.0.1",
     "escape-string-regexp": "^4.0.0",
     "semver": "^7.5.2",
     "silent-error": "^1.1.1",
     "uuid": "^8.3.2",
-    "volar-service-typescript": "0.0.51",
+    "volar-service-typescript": "volar-2.4",
     "vscode-languageserver-textdocument": "^1.0.5",
     "vscode-uri": "^3.0.8",
     "yargs": "^17.5.1"
