get ts building for ts plugin

--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -4,5 +4,5 @@
     "rootDir": "src",
     "outDir": "lib"
   },
-  "include": ["src", "types", "../typescript-plugin/src/typescript-server-plugin.ts"]
+  "include": ["src", "types"]
 }
