--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -55,6 +55,28 @@
         "lifeart.vscode-glimmer-syntax",
         "${workspaceFolder}/test-packages"
       ]
+    },
+    {
+      "name": "Debug Extension (TS Plugin Only, no Glint)",
+      "type": "extensionHost",
+      "request": "launch",
+      "preLaunchTask": "npm: build",
+      "autoAttachChildProcesses": true,
+      "runtimeExecutable": "${execPath}",
+      "outFiles": [
+        "${workspaceFolder}/**/*.js",
+        "!**/node_modules/**"
+      ],
+      "args": [
+        "--extensionDevelopmentPath=${workspaceFolder}/packages/vscode",
+        // "--disable-extension",
+        // "vscode.typescript-language-features",
+        "--disable-extension",
+        "lifeart.vscode-glimmer-syntax",
+        "--disable-extension",
+        "typed-ember.glint-vscode",
+        "${workspaceFolder}/test-packages"
+      ]
     }
   ]
 }
