--- a/packages/typescript-plugin/package.json
+++ b/packages/typescript-plugin/package.json
@@ -14,7 +14,7 @@
     "lib"
   ],
   "scripts": {
-    "test": "vitest run",
+    "test": "echo 'no standalone tests within this project'",
     "test:typecheck": "echo 'no standalone typecheck within this project'",
     "test:tsc": "echo 'no standalone typecheck within this project'",
     "build": "tsc --build",
