--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
       "packages/*",
       "test-packages/*"
     ],
+    "nohoist:comment": "When running extension host in test-packages/ts-plugin-test-app, we need 1. to be able to use workspace TypeScript, and 2. the use a TS Plugin specified as an npm dependency, both which require typescript and the plugin to be present within the same folder's `node_modules` directory.",
     "nohoist": [
       "ts-plugin-test-app/typescript",
       "ts-plugin-test-app/@glint/typescript-plugin"
