add a few more examples to ts plugin

--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -162,6 +162,7 @@
       {
         "name": "@glint/typescript-plugin",
         "enableForWorkspaceTypeScriptVersions": true,
+        "configNamespace": "typescript",
         "languages": [
           "glimmer-ts",
           "glimmer-js"
