Widen peerDependencies to allow @glimmer/component v2

--- a/packages/environment-ember-loose/package.json
+++ b/packages/environment-ember-loose/package.json
@@ -29,7 +29,7 @@
     "registry/**/*.{js,d.ts}"
   ],
   "peerDependencies": {
-    "@glimmer/component": "^1.1.2",
+    "@glimmer/component": ">=1.1.2",
     "@glint/template": "^1.4.0",
     "@types/ember__array": "^4.0.2",
     "@types/ember__component": "^4.0.10",
