--- a/packages/typescript-plugin/package.json
+++ b/packages/typescript-plugin/package.json
@@ -22,7 +22,7 @@
   },
   "dependencies": {
     "@glint/core": "^1.4.0",
-    "@volar/typescript": "2.4.0-alpha.16"
+    "@volar/typescript": "2.4.11"
   },
   "publishConfig": {
     "access": "public"
