--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -232,8 +232,8 @@
     "@glint/core": "^1.4.0",
     "@types/mocha": "^10.0.1",
     "@types/vscode": "^1.68.1",
-    "@volar/language-server": "2.4.0-alpha.16",
-    "@volar/vscode": "2.4.0-alpha.16",
+    "@volar/language-server": "2.4.11",
+    "@volar/vscode": "2.4.11",
     "@vscode/test-electron": "^2.3.8",
     "@vscode/vsce": "^2.22.0",
     "esbuild": "^0.15.16",
