--- a/tsconfig.compileroptions.json
+++ b/tsconfig.compileroptions.json
@@ -5,7 +5,7 @@
     "module": "Node16",
     "moduleResolution": "Node16",
     // changing this was necessary for WeakRef to be available (required/referenced in Volar)
-    "lib": ["ESNext", "dom"],
+    "lib": ["ES2021", "dom"],
     "strict": true,
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
