--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -31,17 +31,17 @@
     "prepack": "yarn build"
   },
   "peerDependencies": {
-    "typescript": ">=5.4.0"
+    "typescript": ">=5.6.0"
   },
   "dependencies": {
     "@glimmer/syntax": "^0.84.3",
-    "@volar/kit": "2.4.0-alpha.16",
-    "@volar/language-core": "2.4.0-alpha.16",
-    "@volar/language-server": "2.4.0-alpha.16",
-    "@volar/language-service": "2.4.0-alpha.16",
-    "@volar/source-map": "2.4.0-alpha.16",
-    "@volar/test-utils": "2.4.0-alpha.16",
-    "@volar/typescript": "2.4.0-alpha.16",
+    "@volar/kit": "2.4.11",
+    "@volar/language-core": "2.4.11",
+    "@volar/language-server": "2.4.11",
+    "@volar/language-service": "2.4.11",
+    "@volar/source-map": "2.4.11",
+    "@volar/test-utils": "2.4.11",
+    "@volar/typescript": "2.4.11",
     "computeds": "^0.0.1",
     "escape-string-regexp": "^4.0.0",
     "semver": "^7.5.2",
