--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -25,7 +25,9 @@
   ],
   "scripts": {
     "pretest": "yarn build",
-    "test": "node lib/__tests__/support/launch-from-cli.mjs",
+    "test": "yarn test-language-server && yarn test-ts-plugin",
+    "test-language-server": "node lib/__tests__/support/launch-from-cli.mjs language-server",
+    "test-ts-plugin": "node lib/__tests__/support/launch-from-cli.mjs ts-plugin",
     "test:typecheck": "echo 'no standalone typecheck within this project'",
     "test:tsc": "echo 'no standalone tsc within this project'",
     "build": "yarn compile && yarn bundle",
