--- a/packages/vscode/__fixtures__/template-imports-app-ts-plugin/tsconfig.json
+++ b/packages/vscode/__fixtures__/template-imports-app-ts-plugin/tsconfig.json
@@ -6,6 +6,8 @@
   },
   "compilerOptions": {
     "baseUrl": ".",
+
+    // TODO: work out the interplay between this and typescriptServerPlugins in extension's package.json
     "plugins": [{ "name": "@glint/typescript-plugin" }]
   }
 }
