--- a/.prettierignore
+++ b/.prettierignore
@@ -20,7 +20,7 @@ dist/
 !/packages/environment*/-private/dsl/**/*.d.ts
 !/packages/environment*/-private/intrinsics/**/*.d.ts
 
-!/packages/vscode/src/generated-meta.ts
+/packages/vscode/src/generated-meta.ts
 
 # Markdown files: the formatting Prettier uses by default *does. not. match.*
 # the formatting applied by Gitbook. Having both present is a recipe for ongoing
