--- a/packages/vscode/tsconfig.json
+++ b/packages/vscode/tsconfig.json
@@ -1,8 +1,9 @@
 {
   "extends": "../../tsconfig.compileroptions.json",
   "compilerOptions": {
-    "module": "Node16",
-    "outDir": "lib"
+    "outDir": "lib",
+    "module": "CommonJS",
+    "moduleResolution": "Node"
   },
   "include": ["src", "__tests__"],
   "references": [{ "path": "../core" }]
