--- a/packages/typescript-plugin/package.json
+++ b/packages/typescript-plugin/package.json
@@ -21,6 +21,7 @@
     "prepack": "yarn build"
   },
   "dependencies": {
+    "jiti": "~2.4.2",
     "@glint/core": "^1.4.0",
     "@volar/typescript": "2.4.11"
   },
